management-api/overlays/prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.moc.thoth-station.ninja
    to:
        kind: Service
        name: management-api
    tls:
        caCertificate: ENC[AES256_GCM,data:ReCp+qBsZCC1gfswE0VXlCFj1cuv1YveDhi1UMXmjTgHyfLf4syoxNRSVJnhqvIqAJpyYIvhPcgkf8AGKryTKfxfMbYDEZTEIY1ANzmeSlHLZ1bDnEOGfxUySWz1VebAnecpDD5vpThJ6ogR+KZdtt9kIAWt7DOv97ONqsYLM1RllOic8g6y4OM/B0DCQmJfvXLH99p36O4bjqDnFsVSC3lLaW+IN6oRM/+AlaeXfWDDbjGgLrdQMzk0VefWKWOEpmLrmdiJfllvwTOy8VIl22K2RG936hkAGYSsSV4JoUv3k2G1e10WPDCq1KlVs8g7sb4SpBy7zYGs6o1wORurJylyVgxO+RXB5/hDEnEgjA2ae75K+KjpZ8sVIUQAD30gRhIi3IxUizX6J27fx/mQXkndxizjVTJ2D8wq8glcSD7KbjP3rqnZqtr85jONVHVyWo3vYOQPg [...]
        certificate: ENC[AES256_GCM,data:8gMtSSxgMYP/hiiWAIMeYCNbEa9g9qztivU3Jhz+nMndovx5dolvlpn7VWqfE+IK/1RLYG41XjOLzrSIFn/BmPsNhVA3M6w/9JJ3/naEqDhLYECiv0dIhOZj5/2QzP8n1Id83qobsW7vEr+EAP95DD3USw1RqMTP51ydPY4MOJXkvaWWBN6oBVAvDksMWp6AfX3Kv4v1KtkwGB1+cq4//ySmJGSO4BLzloi8bEO2pACOvjH3w0VR9sYk9lCjdXf0qs6PT51vjM6LgSzsuAQcNzt3dGkFyHQGkKQAxrfbZF2bexA6nBBcCcWC3H3yRsLxPXxkIqucy1hGgB7bqXO+72ala7FlBFBFDOxl1bJFBEC5QxCVLQBwhWo+GyRSC5J96ktnCu1Hqs64Rwf4HiWR5oG5D4G+AYFcImkNvaYMvZcuT2rXOEec975V/xjGzYVu1/3ZVRZjQgH [...]
        key: ENC[AES256_GCM,data:C5zyvYrwkS5+rwK0ri+6IL/LqFY5KhbSa/r0dMWRGxG4C7PKmiWmapHWkeMZ3JQJTCnsy7249wc7CWHad1LQRJv1ZJE7IWyGvwwLezwEUzW+uQT/Akv2IZeli/lTT0WhVgK55ay+xy6hJdKF3RePCGh8qz1M+oiOfS5e2OzGNKeXqaIlN1WKUdqWZznfdy7YfZy+/ko1QQWImQn96eoakClyfqXhEJTBXakKl140kGqpeXlfO8+PZi8VLQ4kM6N2geEvIL2iaIiGuM4lG3XT+yB4dui85kB74NMZS0qKuJwO+4exaDw2dp9sH/sjpSDMR9utrtx42zLUi6EAT66DOxZLb76ucBhb1DtJNqL4fN6UhwIrMF5POle3+FpRCxjbxJf+tAFl0eifbRcB9TJTRe5v4FyRlAH95SuehFfGVVeoUpsKvzSCNjayafU8ny8zwNNTWJentt8IpZXUShA [...]
        termination: ENC[AES256_GCM,data:laCc6w==,iv:e6CLCrKtJdCSr1xNg0LllrhPTKZvYTaLs/avSKiE5nY=,tag:OQvVqfOACMWtlvABt/R9Kw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-10-26T10:31:57Z'
    mac: ENC[AES256_GCM,data:jrF1tMnQ2hOZK3OylhVocJ3eABtnC5jWyfaVT8MmXLESMOBjqFB4ufi1yoPdIT7eVFF7h8Xt8CuinuPdb+wPhdu7NqeKhPv5pjvT5ndfEBARiKQ/VV5Upd+MdXTfbsxMHoz2ubrFWGlVRspFstMLwSvX6WHsutB4W10NCB+03b0=,iv:WhQgEdeAaeRu1a+k8KstW0do0Y2SuKRnu55xDOh8JjE=,tag:K3i0Kda8HxKnXz+uy0ZbFg==,type:str]
    pgp:
    -   created_at: '2020-10-26T10:31:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYARAAniHx/9P83Gp5tYWmWim09+Hk8heFm+9hKatbJG9jzIMt
[...]
            =VDLd
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-10-26T10:31:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf+I9u31TI0sPmSAHTMbzJVn+YEoMwsuzbc+iIbVpldRbrq
[...]
            yWhmZdLpTlfqGMfW1W/jldDMkH8ytJ9eq2Gwggc+Ow==
            =wfKp
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-10-26T10:31:57Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/Tu6El/YhsRhxwlElvLMN4Aw6vIbmc7XMQnXfiDprVRzu
[...]
            YwTD8zJ3qMGTLMhmCHv/gkxMryCB6cZaWt7OGCz0cg==
            =Ly4R
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
